# pcviewer

./: .gitignore  AndroidManifest.xml  build.xml
jni/src/: .gitignore  Android.mk  CMakeLists.txt  main.cpp  plyReader.cpp  plyReader.hpp  shared.hpp
jni/src/cmake/modules/: FindSDL2.cmake
res/values/: strings.xml
src/cat/pagecorp/pcviewer/: pcviewerActivity.java
